data/derived/sp14/progs/unify/prog0088.ml.out
Characters 576-592:
  | Addition (a,b) -> "(" ^ (exprToString a) ^ "+" ^ (exprToString b) ")";;
                                                     ^^^^^^^^^^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
